Updated on 21May2021

--- a/test-output/old/Demo Cart App Test automtion regression suite/classes.html
+++ b/test-output/old/Demo Cart App Test automtion regression suite/classes.html
@@ -19,6 +19,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>loginNegativeTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>forgotPwdLinkTest</td>
 <td>&nbsp;</td></tr>
 <tr>
