--- a/test-output/old/Demo Cart App Test automtion regression suite/methods.html
+++ b/test-output/old/Demo Cart App Test automtion regression suite/methods.html
@@ -1,16 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Demo Cart App Test automtion regression suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6f797e">  <td>21/04/20 23:54:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@38548b19]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1851796654</td>   <td></td> </tr>
-<tr bgcolor="f2e0bd">  <td>21/04/20 23:54:35</td>   <td>10309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.qa.opencart.tests.LoginPageTest@38548b19]">loginPageTitleTest</td> 
-  <td>TestNG-tests-1@1851796654</td>   <td></td> </tr>
-<tr bgcolor="f2e0bd">  <td>21/04/20 23:54:43</td>   <td>18416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageUrlTest()[pri:2, instance:com.qa.opencart.tests.LoginPageTest@38548b19]">loginPageUrlTest</td> 
-  <td>TestNG-tests-1@1851796654</td>   <td></td> </tr>
-<tr bgcolor="f2e0bd">  <td>21/04/20 23:54:43</td>   <td>18485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPwdLinkTest()[pri:3, instance:com.qa.opencart.tests.LoginPageTest@38548b19]">forgotPwdLinkTest</td> 
-  <td>TestNG-tests-1@1851796654</td>   <td></td> </tr>
-<tr bgcolor="f2e0bd">  <td>21/04/20 23:54:45</td>   <td>20605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:4, instance:com.qa.opencart.tests.LoginPageTest@38548b19]">loginTest</td> 
-  <td>TestNG-tests-1@1851796654</td>   <td></td> </tr>
-<tr bgcolor="6f797e">  <td>21/04/20 23:54:53</td>   <td>28142</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@38548b19]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1851796654</td>   <td></td> </tr>
+<tr bgcolor="7792e7">  <td>21/05/20 00:09:03</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@4e8e8621]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@900330517</td>   <td></td> </tr>
+<tr bgcolor="ed61b1">  <td>21/05/20 00:09:15</td>   <td>12224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginNegativeTest(java.lang.String, java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@4e8e8621]">loginNegativeTest</td> 
+  <td>TestNG-tests-1@900330517</td>   <td></td> </tr>
+<tr bgcolor="ed61b1">  <td>21/05/20 00:09:24</td>   <td>21187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginNegativeTest(java.lang.String, java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@4e8e8621]">loginNegativeTest</td> 
+  <td>TestNG-tests-1@900330517</td>   <td></td> </tr>
+<tr bgcolor="ed61b1">  <td>21/05/20 00:09:32</td>   <td>28516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginNegativeTest(java.lang.String, java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@4e8e8621]">loginNegativeTest</td> 
+  <td>TestNG-tests-1@900330517</td>   <td></td> </tr>
+<tr bgcolor="ed61b1">  <td>21/05/20 00:09:39</td>   <td>35703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.qa.opencart.tests.LoginPageTest@4e8e8621]">loginPageTitleTest</td> 
+  <td>TestNG-tests-1@900330517</td>   <td></td> </tr>
+<tr bgcolor="ed61b1">  <td>21/05/20 00:09:45</td>   <td>41673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageUrlTest()[pri:2, instance:com.qa.opencart.tests.LoginPageTest@4e8e8621]">loginPageUrlTest</td> 
+  <td>TestNG-tests-1@900330517</td>   <td></td> </tr>
+<tr bgcolor="ed61b1">  <td>21/05/20 00:09:45</td>   <td>41724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPwdLinkTest()[pri:3, instance:com.qa.opencart.tests.LoginPageTest@4e8e8621]">forgotPwdLinkTest</td> 
+  <td>TestNG-tests-1@900330517</td>   <td></td> </tr>
+<tr bgcolor="ed61b1">  <td>21/05/20 00:09:46</td>   <td>43266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:4, instance:com.qa.opencart.tests.LoginPageTest@4e8e8621]">loginTest</td> 
+  <td>TestNG-tests-1@900330517</td>   <td></td> </tr>
+<tr bgcolor="7792e7">  <td>21/05/20 00:09:53</td>   <td>49676</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@4e8e8621]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@900330517</td>   <td></td> </tr>
 </table>
